# qli

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  dist-workspace.toml  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
claude-code-plugin/: README.md
claude-code-plugin/.claude-plugin/: plugin.json
claude-code-plugin/commands/: completions.md  ext-install-defaults.md  ext-list.md  ext-which.md
claude-code-plugin/skills/qli/: SKILL.md
crates/qli/: Cargo.toml
crates/qli-core/: Cargo.toml
crates/qli-core/src/: lib.rs
crates/qli-core/tests/: dependency_purity.rs
crates/qli-ext/: Cargo.toml
crates/qli-ext/src/: audit.rs  defaults.rs  discovery.rs  dispatch.rs  guard.rs  lib.rs  manifest.rs  secrets.rs
crates/qli-ext/tests/: secrets_never_leak.rs  xdg_sandbox_smoke.rs
crates/qli-ext/tests/common/: mod.rs
crates/qli-lang/: Cargo.toml
crates/qli-lang/src/: lib.rs
crates/qli-outputs/: Cargo.toml
crates/qli-outputs/src/: lib.rs
crates/qli/src/: cli.rs  exit.rs  ext.rs  logging.rs  main.rs  panic.rs  paths.rs  signal.rs
crates/qli/tests/: claude_code_plugin.rs  cli.rs  dispatcher.rs
crates/qli/tests/cmd/: completions-help.toml  completions-zsh.toml  missing-env.toml  unknown-no-tip.toml  unknown-with-tip.toml  version.toml
crates/qli/tests/common/: mod.rs
extensions/: README.md
extensions/dev/: _manifest.toml  hello
extensions/org/: _manifest.toml  hello
extensions/prod/: _manifest.toml  hello
plans/active/qli-foundation/: qli-foundation-context.md  qli-foundation-plan.md  qli-foundation-tasks.md
scripts/: reserve-placeholder-crates.sh
tests/fixtures/: README.md
