[package]
name = "qli-core"
description = "Core engine traits for the qli polyglot CLI — pure library, no I/O."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dev-dependencies]
cargo_metadata = "0.18"

[lints]
workspace = true
