[package]
name = "qli-ext"
description = "Extension discovery, dispatch, and guardrails for the qli CLI."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dialoguer = { version = "0.11", default-features = false }
include_dir = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
thiserror = "2"
toml = "0.8"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["fs", "signal"] }

[dev-dependencies]
serial_test = "3"
tempfile = "3"

[lints]
workspace = true
