[package]
name = "qli-outputs"
description = "Output formatters (human, jsonl, scip, lsp) for the qli polyglot CLI."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["qli", "formatter", "lsp", "scip", "jsonl"]
categories = ["development-tools"]

[lints]
workspace = true
