[package]
name = "qli"
description = "Polyglot code-analysis CLI and any-language extension framework."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
qli-ext = { path = "../qli-ext", version = "0.0.0" }

clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anstream = "0.6"
anstyle = "1"
anyhow = "1"
ctrlc = { version = "3", features = ["termination"] }
etcetera = "0.10"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
serial_test = "3"
tempfile = "3"
trycmd = "0.15"

[target.'cfg(unix)'.dev-dependencies]
nix = { version = "0.29", default-features = false, features = ["signal"] }

[lints]
workspace = true
